crates/solidity/testing/snapshots/bindings_output/built_ins/shadowing/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
    ╭─[input.sol:14:1]
    │
 14 │ ╭─▶ function sha256() {}
    ┆ ┆   
 18 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     int tx;
    │         ─┬  
    │          ╰── name: 2
    │ 
  4 │     function test() public {
    │              ──┬─  
    │                ╰─── name: 3
  5 │         int block;
    │             ──┬──  
    │               ╰──── name: 4
  6 │         block;
    │         ──┬──  
    │           ╰──── ref: 4
  7 │         tx;
    │         ─┬  
    │          ╰── ref: 2
  8 │         sha256();
    │         ───┬──  
    │            ╰──── ref: 5
    │ 
 11 │     function sha256() public {}
    │              ───┬──  
    │                 ╰──── name: 5
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭─────▶ contract Test {
  2 │ │ │         int tx;
    │ │ │     ──────┬─────  
    │ │ │           ╰─────── definiens: 2
  3 │ │ ╭───▶ 
    ┆ ┆ ┆     
  5 │ │ │             int block;
    │ │ │     ─────────┬─────────  
    │ │ │              ╰─────────── definiens: 4
    ┆ ┆ ┆     
  9 │ │ ├─│ ▶     }
    │ │ │ │           
    │ │ ╰───────────── definiens: 3
 10 │ │   ╭─▶ 
 11 │ │   ├─▶     function sha256() public {}
    │ │   │                                     
    │ │   ╰───────────────────────────────────── definiens: 5
 12 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 1
────╯
